NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Account__c.field-meta.xml
<CustomField>
    <fullName>NATT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>