NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Change_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Change_Completed_Date__c</fullName>
    <formula>IF(ISPICKVAL(NATT_Change_Type__c, &apos;Reconfiguration&apos;),  NATT_Opportunity__r.CloseDate, DATEVALUE( NATT_Change_Initiated_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Completed Date</label>
    <type>Date</type>
</CustomField>