NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Change_Initiated_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Change_Initiated_Date__c</fullName>
    <label>Change Initiated Date</label>
    <type>DateTime</type>
</CustomField>