NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Change_Log_History__c.field-meta.xml
<CustomField>
    <fullName>NATT_Change_Log_History__c</fullName>
    <label>NATT Change Log History</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>