NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Header Change</fullName>
            </value>
            <value>
                <fullName>Requested Ship Date Change</fullName>
            </value>
            <value>
                <fullName>Ship-To</fullName>
            </value>
            <value>
                <fullName>Shipment Method</fullName>
            </value>
            <value>
                <fullName>Reconfiguration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>