NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Closed_Date__c</fullName>
    <inlineHelpText>Closed Date of the Amendment Opportunity</inlineHelpText>
    <label>(Deprecated) Closed Date</label>
    <type>Date</type>
</CustomField>