NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Field__c.field-meta.xml
<CustomField>
    <fullName>NATT_Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>