NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_JDE_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_JDE_Sales_Order_Number__c</fullName>
    <label>JDE Sales Order #</label>
    <length>16</length>
    <type>Text</type>
</CustomField>