NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_New_Value__c.field-meta.xml
<CustomField>
    <fullName>NATT_New_Value__c</fullName>
    <label>New Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>