NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>