NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Opportunity_Status__c</fullName>
    <formula>TEXT(NATT_Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Status</label>
    <type>Text</type>
</CustomField>