NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Order_Product__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>