NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Original_Value__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Value__c</fullName>
    <label>Original Value</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>