NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Quote__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Change Logs</relationshipLabel>
    <relationshipName>Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>