NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/fields/NATT_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Status__c</fullName>
    <formula>TEXT(NATT_Quote__r.SBQQ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>