NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NATT_Account__c</columns>
    <columns>NATT_Order__c</columns>
    <columns>NATT_JDE_Sales_Order_Number__c</columns>
    <columns>NATT_Quote__c</columns>
    <columns>NATT_Change_Initiated_Date__c</columns>
    <columns>NATT_Change_Type__c</columns>
    <columns>NATT_Order_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>