NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/listViews/All_Change_Logs.listView-meta.xml
<ListView>
    <fullName>All_Change_Logs</fullName>
    <columns>NAME</columns>
    <columns>NATT_Account__c</columns>
    <columns>NATT_Order__c</columns>
    <columns>NATT_JDE_Sales_Order_Number__c</columns>
    <columns>NATT_Change_Type__c</columns>
    <columns>NATT_Opportunity__c</columns>
    <columns>NATT_Quote__c</columns>
    <columns>NATT_Product_Family__c</columns>
    <columns>NATT_Unit__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>8/25/2022 12:00 AM</value>
    </filters>
    <label>All Change Logs</label>
</ListView>