NATTQA-ENV/force-app/main/default/objects/NATT_Change_Log__c/listViews/Trailer_Change_Orders1.listView-meta.xml
<ListView>
    <fullName>Trailer_Change_Orders1</fullName>
    <columns>NATT_Quote__c</columns>
    <columns>NATT_JDE_Sales_Order_Number__c</columns>
    <columns>NAME</columns>
    <columns>NATT_Account__c</columns>
    <columns>NATT_Change_Initiated_Date__c</columns>
    <columns>NATT_Change_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NATT_Account__c</field>
        <operation>notContain</operation>
        <value>Test</value>
    </filters>
    <filters>
        <field>NATT_Change_Initiated_Date__c</field>
        <operation>greaterThan</operation>
        <value>6/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>NATT_Product_Family__c</field>
        <operation>equals</operation>
        <value>Trailer</value>
    </filters>
    <label>Trailer Change Orders</label>
    <sharedTo>
        <group>Change_log_List_view_access</group>
    </sharedTo>
</ListView>